Add tests for admin service